feat : show CreateOrUpdateFragment when the newItem FAB is clicked.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_add">Add</string>
+    <string name="hint_diary_title">Enter diary title here</string>
+    <string name="hint_content">Enter content here</string>
 </resources>
