feat : add menu to modify diary item from the DetailsFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="action_add">Add</string>
     <string name="hint_diary_title">Enter diary title here</string>
     <string name="hint_content">Enter content here</string>
+    <string name="action_update">Update</string>
 </resources>
