--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ALC 3.0 Journal</string>
+    <string name="app_name">Journal</string>
     <string name="action_settings">Settings</string>
     <string name="sign_in_to_continue">Sign in to continue</string>
     <string name="action_add">Add</string>
