fix : use proper data formatting.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
         ConstraintLayout and RecyclerView. No drawing, just plug in and play. And this can only
         take 5 liens on the view holder, once it is more than 5 lines, it is truncated from the left hand side.</string>
     <string name="no_notes_available">No Notes yet, click the + icon to add notes</string>
+    <string name="format_created_at">Created : %s</string>
+    <string name="format_updated_at">Modified : %s</string>
 </resources>
